# gearengine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.py
.github/workflows/: test_build.yml
engine_bin/: main.cpp
engine_core/: game.h  gearformat.h  globals.h  object.h  scene.h
engine_core/ecs/: object.h  objectType.h
engine_editor/: main.cpp
